--- a/.ssh/config
+++ b/.ssh/config
@@ -1,7 +1,7 @@
-Host trude
+Host juutilainen
     HostName pbzweihander.me
     PreferredAuthentications publickey
-    IdentityFile ~/.ssh/trude
+    IdentityFile ~/.ssh/juutilainen
 Host helma
     HostName helma.pbzweihander.me
     PreferredAuthentications publickey
