ssh config for heinrike

--- a/home/.ssh/config
+++ b/home/.ssh/config
@@ -1,7 +1,7 @@
-Host juutilainen
-    HostName pbzweihander.me
+Host heinrike
+    HostName heinrike.pbzweihander.me
     PreferredAuthentications publickey
-    IdentityFile ~/.ssh/juutilainen
+    IdentityFile ~/.ssh/heinrike
 Host helma
     HostName helma.pbzweihander.me
     PreferredAuthentications publickey
