--- a/home/.ssh/config
+++ b/home/.ssh/config
@@ -2,6 +2,7 @@ Host heinrike
     HostName heinrike.pbzweihander.me
     PreferredAuthentications publickey
     IdentityFile ~/.ssh/heinrike
+
 Host helma
     HostName helma.pbzweihander.me
     PreferredAuthentications publickey
@@ -13,3 +14,8 @@ Host martini
 
 Host cosmopolitan
     HostName cosmopolitan.snucse.org
+
+Host horoyoi
+    HostName horoyoi.bacchus.io
+    User pbzweihander
+
