unified ssh publickey for horoyoi and helma

--- a/home/.ssh/config
+++ b/home/.ssh/config
@@ -6,7 +6,7 @@ Host heinrike
 Host helma
     HostName helma.pbzweihander.me
     PreferredAuthentications publickey
-    IdentityFile ~/.ssh/helma
+    IdentityFile ~/.ssh/ed25519
 
 Host martini
     HostName martini.snucse.org
@@ -18,4 +18,6 @@ Host cosmopolitan
 Host horoyoi
     HostName horoyoi.bacchus.io
     User pbzweihander
+    PreferredAuthentications publickey
+    IdentityFile ~/.ssh/ed25519
 
