rename privatekey file

--- a/home/.ssh/config
+++ b/home/.ssh/config
@@ -6,7 +6,7 @@ Host heinrike
 Host helma
     HostName helma.pbzweihander.me
     PreferredAuthentications publickey
-    IdentityFile ~/.ssh/ed25519
+    IdentityFile ~/.ssh/id_ed25519
 
 Host martini
     HostName martini.snucse.org
@@ -19,5 +19,11 @@ Host horoyoi
     HostName horoyoi.bacchus.io
     User pbzweihander
     PreferredAuthentications publickey
-    IdentityFile ~/.ssh/ed25519
+    IdentityFile ~/.ssh/id_ed25519
+
+Host github
+    HostName github.com
+    User git
+    PreferredAuthentications publickey
+    IdentityFile ~/.ssh/id_ed25519
 
