--- a/home/.ssh/config
+++ b/home/.ssh/config
@@ -27,3 +27,8 @@ Host github
     PreferredAuthentications publickey
     IdentityFile ~/.ssh/id_ed25519
 
+Host upnl-gitlab
+    HostName git.upnl.org
+    User git
+    PreferredAuthentications publickey
+    IdentityFile ~/.ssh/id_ed25519
