use publickey for martini

--- a/home/.ssh/config
+++ b/home/.ssh/config
@@ -10,6 +10,7 @@ Host helma
 
 Host martini
     HostName martini.snucse.org
+    PreferredAuthentications publickey
     User sd852456
 
 Host cosmopolitan
