privatekey setting for heinrike

--- a/home/.ssh/config
+++ b/home/.ssh/config
@@ -1,7 +1,7 @@
 Host heinrike
     HostName heinrike.pbzweihander.me
     PreferredAuthentications publickey
-    IdentityFile ~/.ssh/heinrike
+    IdentityFile ~/.ssh/id_ed25519
 
 Host helma
     HostName helma.pbzweihander.me
