ssh: add host gemini

--- a/home/.ssh/config
+++ b/home/.ssh/config
@@ -35,3 +35,9 @@ Host upnl-gitlab
     User git
     PreferredAuthentications publickey
     IdentityFile ~/.ssh/id_ed25519
+
+Host gemini
+    HostName gemini.upnl.org
+    User pbzweihander
+    PreferredAuthentications publickey
+    IdentityFile ~/.ssh/id_ed25519
