ssh: upnl servers

--- a/home/.ssh/config
+++ b/home/.ssh/config
@@ -38,6 +38,26 @@ Host upnl-gitlab
 
 Host gemini
     HostName gemini.upnl.org
+    Port 2222
     User pbzweihander
     PreferredAuthentications publickey
     IdentityFile ~/.ssh/id_ed25519
+
+Host sodrak
+    HostName sodrak.upnl.org
+    User pbzweihander
+    PreferredAuthentications publickey
+    IdentityFile ~/.ssh/id_ed25519
+
+Host uriel
+    HostName uriel.upnl.org
+    User pbzweihander
+    PreferredAuthentications publickey
+    IdentityFile ~/.ssh/id_ed25519
+
+Host edhelbroy
+    HostName edhelbroy.upnl.org
+    User pbzweihander
+    PreferredAuthentications publickey
+    IdentityFile ~/.ssh/id_ed25519
+
