ssh: mimosa server

--- a/home/.ssh/config
+++ b/home/.ssh/config
@@ -61,3 +61,9 @@ Host edhelbroy
     PreferredAuthentications publickey
     IdentityFile ~/.ssh/id_ed25519
 
+Host mimosa
+    HostName mimosa.snucse.org
+    User sd852456
+    PreferredAuthentications publickey
+    IdentityFile ~/.ssh/id_ed25519
+
