ssh: litvyak server

--- a/home/.ssh/config
+++ b/home/.ssh/config
@@ -67,3 +67,8 @@ Host mimosa
     PreferredAuthentications publickey
     IdentityFile ~/.ssh/id_ed25519
 
+Host litvyak
+    HostName litvyak.pbzweihander.me
+    User xsirious
+    PreferredAuthentications publickey
+    IdentityFile ~/.ssh/id_ed25519
