--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -1,4 +1,6 @@
-set -g prefix C-q
+unbind-key C-b
+set -g prefix 'C-\'
+bind-key 'C-\' send-prefix
 set -g base-index 1
 set -g mode-keys vi
 set -g default-terminal "screen-256color"
