tmux: TERM=xterm-256colors

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -1,9 +1,12 @@
 unbind-key C-b
 set -g prefix 'C-\'
 bind-key 'C-\' send-prefix
+
+set-window-option -g xterm-keys on
+
 set -g base-index 1
 set -g mode-keys vi
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
 set -g status-bg colour235
 set -g status-fg colour245
 set -g status-position top
