ssh: add host olmeca

--- a/home/.ssh/config
+++ b/home/.ssh/config
@@ -24,6 +24,12 @@ Host horoyoi
     PreferredAuthentications publickey
     IdentityFile ~/.ssh/id_ed25519
 
+Host olmeca
+    HostName olmeca.snucse.org
+    User pbzweihander
+    PreferredAuthentications publickey
+    IdentityFile ~/.ssh/id_ed25519
+
 Host github
     HostName github.com
     User git
