micro: eof newline

--- a/home/.config/micro/settings.json
+++ b/home/.config/micro/settings.json
@@ -6,7 +6,7 @@
     "colorcolumn": 0,
     "colorscheme": "default",
     "cursorline": true,
-    "eofnewline": false,
+    "eofnewline": true,
     "fastdirty": true,
     "fileformat": "unix",
     "ftoptions": true,
