--- a/home/.config/alactritty/alacritty.yml
+++ b/home/.config/alactritty/alacritty.yml
@@ -61,19 +61,19 @@ draw_bold_text_with_bright_colors: true
 font:
   # The normal (roman) font face to use.
   normal:
-    family: DroidSansMono Nerd Font Mono # should be "Menlo" or something on macOS.
+    family: Droid Sans Mono # should be "Menlo" or something on macOS.
     # Style can be specified to pick a specific face.
     # style: Regular
 
   # The bold font face
   bold:
-    family: DroidSansMono Nerd Font Mono # should be "Menlo" or something on macOS.
+    family: Droid Sans Mono # should be "Menlo" or something on macOS.
     # Style can be specified to pick a specific face.
     # style: Bold
 
   # The italic font face
   italic:
-    family: DroidSansMono Nerd Font Mono # should be "Menlo" or something on macOS.
+    family: Droid Sans Mono # should be "Menlo" or something on macOS.
     # Style can be specified to pick a specific face.
     # style: Italic
 
