--- a/desktops/alacritty.desktop
+++ b/desktops/alacritty.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Type=Application
 TryExec=alacritty
-Exec=env WAYLAND_DISPLAY= alacritty -e tmux
+Exec=env WAYLAND_DISPLAY= alacritty
 Icon=utilities-terminal
 Terminal=false
 Categories=System;TerminalEmulator;
@@ -16,4 +16,4 @@ X-Desktop-File-Install-Version=0.24
 
 [Desktop Action New]
 Name=New Terminal
-Exec=env WAYLAND_DISPLAY= alacritty -e tmux
+Exec=env WAYLAND_DISPLAY= alacritty
