--- a/home/.config/alacritty/alacritty.yml
+++ b/home/.config/alacritty/alacritty.yml
@@ -465,3 +465,7 @@ key_bindings:
   - { key: F10,      mods: Super,   chars: "\x1b[21;3~"                  }
   - { key: F11,      mods: Super,   chars: "\x1b[23;3~"                  }
   - { key: F12,      mods: Super,   chars: "\x1b[24;3~"                  }
+  - { key: PageUp,   mods: Alt,     action: ScrollPageUp                 }
+  - { key: PageDown, mods: Alt,     action: ScrollPageDown               }
+  - { key: End,      mods: Alt,     action: ScrollToBottom               }
+  - { key: Home,     mods: Alt,     action: ScrollToTop                  }
