fightingfalcon: install qpdfview

--- a/home/.config/environment.d/input_method.conf
+++ b/home/.config/environment.d/input_method.conf
@@ -1,6 +1,3 @@
-export XIM=nabi
-export XIM_ARGS=
-export XIM_PROGRAM="nabi"
-export XMODIFIERS="@im=nabi"
 export GTK_IM_MODULE=xim
+export XMODIFIERS=@im=ibus
 export QT_IM_MODULE=xim
