--- a/home/.config/environment.d/input_method.conf
+++ b/home/.config/environment.d/input_method.conf
@@ -1,3 +1,3 @@
-export GTK_IM_MODULE=xim
-export XMODIFIERS=@im=ibus
-export QT_IM_MODULE=xim
+GTK_IM_MODULE=xim
+XMODIFIERS=@im=ibus
+QT_IM_MODULE=xim
