new server lemare

--- a/home/.ssh/config
+++ b/home/.ssh/config
@@ -78,3 +78,9 @@ Host litvyak
     User xsirious
     PreferredAuthentications publickey
     IdentityFile ~/.ssh/id_ed25519
+
+Host lemare
+    HostName 52.192.202.89
+    User thomas
+    PreferredAuthentications publickey
+    IdentityFile ~/.ssh/id_ed25519
