ssh: add host rum and gitlab

--- a/home/.ssh/config
+++ b/home/.ssh/config
@@ -30,8 +30,20 @@ Host olmeca
     PreferredAuthentications publickey
     IdentityFile ~/.ssh/id_ed25519
 
+Host rum
+    HostName rum.snucse.org
+    User pbzweihander
+    PreferredAuthentications publickey
+    IdentityFile ~/.ssh/id_ed25519
+
 Host github
     HostName github.com
+    User git
+    PreferredAuthentications publickey
+    IdentityFile ~/.ssh/id_ed25519
+
+Host gitlab
+    HostName gitlab.com
     User git
     PreferredAuthentications publickey
     IdentityFile ~/.ssh/id_ed25519
