Add hosts spoqa-bitbucket, crawl

--- a/home/.ssh/config
+++ b/home/.ssh/config
@@ -54,6 +54,13 @@ Host upnl-gitlab
     PreferredAuthentications publickey
     IdentityFile ~/.ssh/id_ed25519
 
+Host spoqa-bitbucket
+    HostName git.spoqa.com
+    Port 7999
+    User git
+    PreferredAuthentications publickey
+    IdentityFile ~/.ssh/id_rsa
+
 Host gemini
     HostName gemini.upnl.org
     Port 2222
@@ -96,3 +103,10 @@ Host lemare
     User thomas
     PreferredAuthentications publickey
     IdentityFile ~/.ssh/id_ed25519
+
+Host crawl
+    HostName crawl.develz.org
+    User crawl
+    PreferredAuthentications publickey
+    IdentityFile ~/.ssh/id_crawl
+
