--- a/home/.config/i3/status.toml
+++ b/home/.config/i3/status.toml
@@ -7,7 +7,7 @@ block = "focused_window"
 [[block]]
 block = "toggle"
 text = "monitor"
-command_state = "xrandr | grep DP1\\ connected\\ 19 | grep -v eDP1"
+command_state = "xrandr | grep DP1\\ connected\\ 1920x1200"
 command_on = "xrandr --output DP1 --above eDP1 --auto"
 command_off = "xrandr --output DP1 --off"
 interval = 10
