i3: volume and brightness control

--- a/home/.config/i3/config
+++ b/home/.config/i3/config
@@ -139,6 +139,13 @@ bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcu
 bindsym Print exec scrot 'Screenshot from %Y-%m-%d %H-%M-%S.png' -e 'mv "$f" ~/Pictures/'
 bindsym Control+Print exec gnome-screenshot -i
 
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl -- set-sink-volume 0 +5%
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl -- set-sink-volume 0 -5%
+bindsym XF86AudioMute exec --no-startup-id pactl -- set-sink-mute 0 toggle
+
+bindsym XF86MonBrightnessUp exec xbacklight -inc 20
+bindsym XF86MonBrightnessDown exec xbacklight -dec 20
+
 mode "resize" {
     bindsym h resize shrink width 10 px or 10 ppt
     bindsym j resize grow height 10 px or 10 ppt
