ssh: Add server heidemarie

--- a/home/.ssh/config
+++ b/home/.ssh/config
@@ -110,3 +110,8 @@ Host crawl
     PreferredAuthentications publickey
     IdentityFile ~/.ssh/id_crawl
 
+Host heidemarie
+    HostName 35.225.15.252
+    User pbzweihander
+    PreferredAuthentications publickey
+    IdentityFile ~/.ssh/id_ed25519
