--- a/home/.config/i3/config
+++ b/home/.config/i3/config
@@ -1,79 +1,22 @@
 # vim: sw=4
-# i3 config file (v4)
-#
-# Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
 set $mod Mod4
 
-# Font for window titles. Will also be used by the bar unless a different font
-# is used in the bar {} block below.
-font pango:DejaVu Sans Mono 8
+set $left h
+set $down j
+set $up k
+set $right l
 
-# Use Mouse+$mod to drag floating windows to their wanted position
-floating_modifier $mod
+set $term WINIT_HIDPI_FACTOR=1.0 alacritty
+set $menu rofi -theme Adapta-Nokto -show run | xargs i3-msg exec
 
-# start a terminal
-bindsym $mod+Return exec WINIT_HIDPI_FACTOR=1.0 alacritty
+set $lock scrot /tmp/lock-screen.png &&\
+        convert /tmp/lock-screen.png -scale 2.5% -scale 4000% /tmp/lock-screen.png &&\
+        i3lock -e -i /tmp/lock-screen.png -c 000000 &&\
+        sleep 1
+set $capture scrot "$(xdg-user-dir PICTURES)/Screenshot from %Y-%m-%d %H-%M-%S.png"
+set $capture_region gnome-screenshot -i
 
-# kill focused window
-bindsym $mod+Shift+q kill
-
-# start dmenu (a program launcher)
-bindsym $mod+x exec dmenu_run
-bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
-
-# change focus
-bindsym $mod+h focus left
-bindsym $mod+j focus down
-bindsym $mod+k focus up
-bindsym $mod+l focus right
-
-# alternatively, you can use the cursor keys:
-bindsym $mod+Left focus left
-bindsym $mod+Down focus down
-bindsym $mod+Up focus up
-bindsym $mod+Right focus right
-
-# move focused window
-bindsym $mod+Shift+h move left
-bindsym $mod+Shift+j move down
-bindsym $mod+Shift+k move up
-bindsym $mod+Shift+l move right
-
-# alternatively, you can use the cursor keys:
-bindsym $mod+Shift+Left move left
-bindsym $mod+Shift+Down move down
-bindsym $mod+Shift+Up move up
-bindsym $mod+Shift+Right move right
-
-# split in horizontal orientation
-bindsym $mod+Shift+v split h
-
-# split in vertical orientation
-bindsym $mod+v split v
-
-# enter fullscreen mode for the focused container
-bindsym $mod+f fullscreen toggle
-
-# change container layout (stacked, tabbed, toggle split)
-bindsym $mod+s layout stacking
-bindsym $mod+w layout tabbed
-bindsym $mod+e layout toggle split
-
-# toggle tiling / floating
-bindsym $mod+Shift+space floating toggle
-
-# change focus between tiling / floating windows
-bindsym $mod+space focus mode_toggle
-
-# focus the parent container
-bindsym $mod+a focus parent
-
-# focus the child container
-#bindsym $mod+d focus child
-
-# Define names for default workspaces for which we configure key bindings later on.
-# We use variables to avoid repeating the names in multiple places.
 set $ws1 "1"
 set $ws2 "2"
 set $ws3 "3"
@@ -85,7 +28,59 @@ set $ws8 "8"
 set $ws9 "9"
 set $ws10 "10"
 
-# switch to workspace
+
+default_border pixel 2
+focus_follows_mouse no
+
+for_window [window_role="pop-up"] floating enable
+for_window [window_role="task_dialog"] floating enable
+
+font pango:DejaVu Sans Mono 8
+
+
+bar {
+    position top
+    font pango:DejaVu Sans Mono, FontAwesome 12
+
+    status_command i3status-rs ~/.config/i3/status.toml
+}
+
+
+bindsym $mod+Return exec $term
+
+bindsym $mod+Shift+q kill
+
+bindsym $mod+d exec $menu
+
+floating_modifier $mod
+
+bindsym $mod+Shift+r restart
+bindsym $mod+Shift+c reload
+bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
+
+bindsym $mod+$left focus left
+bindsym $mod+$down focus down
+bindsym $mod+$up focus up
+bindsym $mod+$right focus right
+
+bindsym $mod+Left focus left
+bindsym $mod+Down focus down
+bindsym $mod+Up focus up
+bindsym $mod+Right focus right
+
+bindsym $mod+Shift+$left move left
+bindsym $mod+Shift+$down move down
+bindsym $mod+Shift+$up move up
+bindsym $mod+Shift+$right move right
+
+bindsym $mod+Shift+Left move left
+bindsym $mod+Shift+Down move down
+bindsym $mod+Shift+Up move up
+bindsym $mod+Shift+Right move right
+
+bindsym $mod+bracketleft workspace prev
+bindsym $mod+bracketright workspace next
+
 bindsym $mod+1 workspace $ws1
 bindsym $mod+2 workspace $ws2
 bindsym $mod+3 workspace $ws3
@@ -97,7 +92,6 @@ bindsym $mod+8 workspace $ws8
 bindsym $mod+9 workspace $ws9
 bindsym $mod+0 workspace $ws10
 
-# move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace $ws1
 bindsym $mod+Shift+2 move container to workspace $ws2
 bindsym $mod+Shift+3 move container to workspace $ws3
@@ -109,19 +103,45 @@ bindsym $mod+Shift+8 move container to workspace $ws8
 bindsym $mod+Shift+9 move container to workspace $ws9
 bindsym $mod+Shift+0 move container to workspace $ws10
 
-bindsym $mod+Shift+c reload
-bindsym $mod+Shift+r restart
-bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
+bindsym $mod+Control+Shift+$left move workspace to output left
+bindsym $mod+Control+Shift+$down move workspace to output down
+bindsym $mod+Control+Shift+$up move workspace to output up
+bindsym $mod+Control+Shift+$right move workspace to output right
 
-bindsym Print exec scrot 'Screenshot from %Y-%m-%d %H-%M-%S.png' -e 'mv "$f" ~/Pictures/'
-bindsym Control+Print exec gnome-screenshot -i
+bindsym $mod+Control+$left resize shrink width 5 px or 5 ppt
+bindsym $mod+Control+$down resize grow height 5 px or 5 ppt
+bindsym $mod+Control+$up resize shrink height 5 px or 5 ppt
+bindsym $mod+Control+$right resize grow width 5 px or 5 ppt
+
+bindsym $mod+b splith
+bindsym $mod+v splitv
+
+bindsym $mod+s layout stacking
+bindsym $mod+w layout tabbed
+bindsym $mod+e layout toggle split
+
+bindsym $mod+f fullscreen toggle
+bindsym $mod+Shift+space floating toggle
+
+bindsym $mod+space focus mode_toggle
+
+bindsym $mod+a focus parent
+bindsym $mod+z focus child
+
+bindsym $mod+minus move scratchpad
+bindsym $mod+equal scratchpad show
+
+bindsym Print exec $capture
+bindsym Control+Print exec $capture_region
 
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl -- set-sink-volume 0 +5%
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl -- set-sink-volume 0 -5%
 bindsym XF86AudioMute exec --no-startup-id pactl -- set-sink-mute 0 toggle
 
-bindsym XF86MonBrightnessUp exec xbacklight -inc 20
-bindsym XF86MonBrightnessDown exec xbacklight -dec 20
+bindsym XF86MonBrightnessUp exec --no-startup-id xbacklight -inc 10
+bindsym XF86MonBrightnessDown exec --no-startup-id xbacklight -dec 10
+bindsym Shift+XF86MonBrightnessUp exec --no-startup-id xbacklight -inc 5
+bindsym Shift+XF86MonBrightnessDown exec --no-startup-id xbacklight -dec 5
 
 bindsym $mod+p exec --no-startup-id xrandr --output DP1 --above eDP1 --auto
 bindsym $mod+Shift+p exec --no-startup-id xrandr --output DP1 --off
@@ -132,15 +152,15 @@ bindsym --release $mod+button2 kill
 bindsym $mod+button3 floating toggle
 
 mode "resize" {
-    bindsym h resize shrink width 10 px or 10 ppt
-    bindsym j resize grow height 10 px or 10 ppt
-    bindsym k resize shrink height 10 px or 10 ppt
-    bindsym l resize grow width 10 px or 10 ppt
+    bindsym $left resize shrink width 10 px or 10 ppt
+    bindsym $down resize grow height 10 px or 10 ppt
+    bindsym $up resize shrink height 10 px or 10 ppt
+    bindsym $right resize grow width 10 px or 10 ppt
 
-    bindsym Shift+h resize shrink width 5 px or 5 ppt
-    bindsym Shift+j resize grow height 5 px or 5 ppt
-    bindsym Shift+k resize shrink height 5 px or 5 ppt
-    bindsym Shift+l resize grow width 5 px or 5 ppt
+    bindsym Shift+$left resize shrink width 5 px or 5 ppt
+    bindsym Shift+$down resize grow height 5 px or 5 ppt
+    bindsym Shift+$up resize shrink height 5 px or 5 ppt
+    bindsym Shift+$right resize grow width 5 px or 5 ppt
 
     bindsym Left  resize shrink width 10 px or 10 ppt
     bindsym Down  resize grow height 10 px or 10 ppt
@@ -158,14 +178,12 @@ mode "resize" {
 }
 bindsym $mod+r mode "resize"
 
-set $Locker ~/utils/lock.sh
-
 set $mode_system System (l) lock, (e) logout, (s) suspend, (h) hibernate, (r) reboot, (Shift+s) shutdown
 mode "$mode_system" {
-    bindsym l exec --no-startup-id $Locker, mode "default"
+    bindsym l exec --no-startup-id $lock, mode "default"
     bindsym e exec --no-startup-id i3-msg exit, mode "default"
-    bindsym s exec --no-startup-id $Locker && systemctl suspend, mode "default"
-    bindsym h exec --no-startup-id $Locker && systemctl hibernate, mode "default"
+    bindsym s exec --no-startup-id $lock && systemctl suspend, mode "default"
+    bindsym h exec --no-startup-id $lock && systemctl hibernate, mode "default"
     bindsym r exec --no-startup-id systemctl reboot, mode "default"
     bindsym Shift+s exec --no-startup-id systemctl poweroff -i, mode "default"
 
@@ -173,39 +191,5 @@ mode "$mode_system" {
     bindsym Escape mode "default"
 }
 bindsym $mod+Escape mode "$mode_system"
-
-mode "move workspace to output" {
-    bindsym h move workspace to output left
-    bindsym j move workspace to output down
-    bindsym k move workspace to output up
-    bindsym l move workspace to output right
-
-    bindsym 1 workspace $ws1
-    bindsym 2 workspace $ws2
-    bindsym 3 workspace $ws3
-    bindsym 4 workspace $ws4
-    bindsym 5 workspace $ws5
-    bindsym 6 workspace $ws6
-    bindsym 7 workspace $ws7
-    bindsym 8 workspace $ws8
-    bindsym 9 workspace $ws9
-    bindsym 0 workspace $ws10
-
-    bindsym Return mode "default"
-    bindsym Escape mode "default"
-    bindsym $mod+m mode "default"
-}
-bindsym $mod+m mode "move workspace to output"
-
-bar {
-    font pango:DejaVu Sans Mono, FontAwesome 12
-    position top
-    status_command i3status-rs ~/.config/i3/status.toml
-}
-
-focus_follows_mouse no
-
-for_window [window_role="pop-up"] floating enable
-for_window [window_role="task_dialog"] floating enable
 
 exec --no-startup-id xautolock -time 10 -locker $Locker
