--- a/home/.config/i3/status.toml
+++ b/home/.config/i3/status.toml
@@ -8,6 +8,12 @@ block = "focused_window"
 block = "pacman"
 
 [[block]]
+block = "music"
+player = "spotify"
+buttons = ["play", "next"]
+marquee = false
+
+[[block]]
 block = "cpu"
 
 [[block]]
