--- a/home/.config/sway/config
+++ b/home/.config/sway/config
@@ -18,6 +18,7 @@ set $capture grim "$(xdg-user-dir PICTURES)/$(date +'Screenshot from %Y-%m-%d %H
 set $capture_region grim -g "$(slurp)" "$(xdg-user-dir PICTURES)/$(date +'Screenshot from %Y-%m-%d %H-%M-%S.png')"
 set $alsamixer alacritty --class floatingAlsamixer -e alsamixer
 set $nmtui alacritty --class floatingNmtui -e nmtui
+set $spotify_command dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player
 
 set $ws1 "1"
 set $ws2 "2"
@@ -40,7 +41,7 @@ for_window [app_id="floatingAlacritty"] floating enable
 for_window [app_id="floatingAlsamixer"] floating enable
 for_window [app_id="floatingNmtui"] floating enable
 
-font pango:Meslo LG S, Noto Sans Mono CJK KR 9
+font pango:Meslo LG S, Noto Sans Mono CJK KR 10
 
 input type:touchpad {
     natural_scroll enabled
@@ -158,6 +159,16 @@ bindsym Control+Print exec $capture_region
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl -- set-sink-volume 0 +5%
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl -- set-sink-volume 0 -5%
 bindsym XF86AudioMute exec --no-startup-id pactl -- set-sink-mute 0 toggle
+bindsym $mod+F12 exec --no-startup-id pactl -- set-sink-volume 0 +5%
+bindsym $mod+F11 exec --no-startup-id pactl -- set-sink-volume 0 -5%
+bindsym $mod+F10 exec --no-startup-id pactl -- set-sink-mute 0 toggle
+
+bindsym XF86AudioNext exec --no-startup-id $spotify_command.Next
+bindsym XF86AudioPrev exec --no-startup-id $spotify_command.Previous
+bindsym XF86AudioPlay exec --no-startup-id $spotify_command.PlayPause
+bindsym $mod+F8 exec --no-startup-id $spotify_command.Next
+bindsym $mod+F7 exec --no-startup-id $spotify_command.Previous
+bindsym $mod+F6 exec --no-startup-id $spotify_command.PlayPause
 
 bindsym XF86MonBrightnessUp exec --no-startup-id light -A 10
 bindsym XF86MonBrightnessDown exec --no-startup-id light -U 10
