--- a/home/.config/sway/config
+++ b/home/.config/sway/config
@@ -21,8 +21,8 @@ set $lock 'for OUTPUT in $(swaymsg -rt get_outputs | jq -r .[].name); do \
     echo -i ${OUTPUT}:/tmp/lock-screen-${OUTPUT}.png; done |\
     xargs swaylock -fec 000000 &&\
     rm -f /tmp/lock-screen-*.png'
-set $capture grim "$(xdg-user-dir PICTURES)/screenshots/$(date +'Screenshot from %Y-%m-%d %H-%M-%S.png')"
-set $capture_region grim -g "$(slurp)" "$(xdg-user-dir PICTURES)/screenshots/$(date +'Screenshot from %Y-%m-%d %H-%M-%S.png')"
+set $capture grim "$(xdg-user-dir PICTURES)/screenshots/$(date +'screenshot_%Y-%m-%d_%H-%M-%S.png')"
+set $capture_region grim -g "$(slurp)" "$(xdg-user-dir PICTURES)/screenshots/$(date +'screenshot_%Y-%m-%d_%H-%M-%S.png')"
 set $alsamixer alacritty --class floatingAlsamixer -e alsamixer
 set $nmtui alacritty --class floatingNmtui -e nmtui
 set $spotify_command dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player
@@ -232,10 +232,4 @@ mode "$mode_system" {
 }
 bindsym $mod+Escape mode "$mode_system"
 
-exec swayidle -w \
-         timeout 600 $lock \
-         timeout 900 'swaymsg "output * dpms off"' \
-              resume 'swaymsg "output * dpms on"' \
-         before-sleep $lock
-exec mako
-exec nimf
+exec "systemctl --user import-environment; systemctl --user start sway-session.target"
