--- a/home/.config/starship.toml
+++ b/home/.config/starship.toml
@@ -13,8 +13,9 @@ prompt_order = [
     "golang",
     "nix_shell",
     "cmd_duration",
-    "jobs",
     "battery",
+    "time",
+    "jobs",
     "line_break",
     "character",
 ]
@@ -34,3 +35,6 @@ diverged = "⇡⇣"
 
 [package]
 disabled = true
+
+[time]
+disabled = false
