--- a/home/.config/alacritty/alacritty.yml
+++ b/home/.config/alacritty/alacritty.yml
@@ -89,19 +89,19 @@ tabspaces: 4
 font:
   # Normal (roman) font face
   normal:
-    family: Victor Mono SemiBold
+    family: Victor Mono Medium
     # The `style` can be specified to pick a specific face.
     #style: Regular
 
   # Bold font face
   bold:
-    family: Victor Mono SemiBold
+    family: Victor Mono Medium
     # The `style` can be specified to pick a specific face.
     #style: Bold
 
   # Italic font face
   italic:
-    family: Victor Mono SemiBold
+    family: Victor Mono Medium
     # The `style` can be specified to pick a specific face.
     #style: Italic
 
