ssh: Update hosts

--- a/home/.ssh/config
+++ b/home/.ssh/config
@@ -61,12 +61,19 @@ Host spoqa-bitbucket
     PreferredAuthentications publickey
     IdentityFile ~/.ssh/id_rsa
 
-Host gemini
-    HostName gemini.upnl.org
+Host oldgemini
+    HostName 121.140.51.227
     Port 2222
     User pbzweihander
     PreferredAuthentications publickey
     IdentityFile ~/.ssh/id_ed25519
+
+Host gemini
+    HostName gemini.upnl.org
+    Port 2222
+    User ec2-user
+    PreferredAuthentications publickey
+    IdentityFile ~/.ssh/id_gemini
 
 Host sodrak
     HostName sodrak.upnl.org
@@ -113,5 +120,11 @@ Host crawl
 Host heidemarie
     HostName 35.225.15.252
     User pbzweihander
+    PreferredAuthentications publickey
+    IdentityFile ~/.ssh/id_ed25519
+
+Host i-* mi-*
+    ProxyCommand sh -c "aws ssm start-session --target %h --document-name AWS-StartSSHSession --parameters 'portNumber=%p'"
+    User ec2-user
     PreferredAuthentications publickey
     IdentityFile ~/.ssh/id_ed25519
