--- a/home/.config/sway/config
+++ b/home/.config/sway/config
@@ -9,7 +9,7 @@ set $right l
 set $term alacritty
 set $x_term WAYLAND_DISPLAY= WINIT_HIDPI_FACTOR=1.0 alacritty
 set $floating_term alacritty --class floatingAlacritty
-set $menu rofi -theme Adapta-Nokto -show run | xargs swaymsg exec
+set $menu GDK_BACKEND=x11 ulauncher
 
 set $lock 'for OUTPUT in $(swaymsg -rt get_outputs | jq -r .[].name); do \
     grim -o $OUTPUT /tmp/lock-screen-${OUTPUT}.png &&\
@@ -25,7 +25,8 @@ set $capture grim "$(xdg-user-dir PICTURES)/screenshots/$(date +'screenshot_%Y-%
 set $capture_region grim -g "$(slurp)" "$(xdg-user-dir PICTURES)/screenshots/$(date +'screenshot_%Y-%m-%d_%H-%M-%S.png')"
 set $alsamixer alacritty --class floatingAlsamixer -e alsamixer
 set $nmtui alacritty --class floatingNmtui -e nmtui
-set $spotify_command dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player
+set $spotify_tui alacritty --class floatingSpotifytui -e spt
+set $floating_pcmanfm pcmanfm --class=floatingPCManFM
 
 set $ws1 "1"
 set $ws2 "2"
@@ -47,16 +48,26 @@ for_window [window_role="task_dialog"] floating enable
 for_window [app_id="floatingAlacritty"] floating enable
 for_window [app_id="floatingAlsamixer"] floating enable
 for_window [app_id="floatingNmtui"] floating enable
+for_window [app_id="floatingSpotifytui"] floating enable
+for_window [class="floatingPCManFM"] floating enable
 
-font pango:Meslo LG S, Noto Sans Mono CJK KR 10
+font pango:Victor Mono, Noto Sans Mono CJK KR 10
 
 input type:touchpad {
     natural_scroll enabled
     click_method clickfinger
+    dwt disabled
+}
+
+input "1133:50184:Logitech_USB_Trackball" {
+    middle_emulation enabled
+    scroll_method on_button_down
+    scroll_button button8
+    accel_profile adaptive
 }
 
 input type:keyboard {
-    xkb_options "ctrl:nocaps,korean:ralt_rctrl"
+    xkb_options "ctrl:nocaps,korean:ralt_hangul,korean:rctrl_hanja"
 }
 
 output DP-1 {
@@ -68,12 +79,7 @@ output eDP-1 {
 }
 
 bar {
-    tray_output none
-
-    position top
-    font pango:Meslo LG S, Noto Sans Mono CJK KR, FontAwesome 13
-
-    status_command i3status-rs ~/.config/sway/status.toml
+    swaybar_command waybar
 }
 
 
@@ -173,13 +179,6 @@ bindsym $mod+F12 exec --no-startup-id pactl -- set-sink-volume 0 +5%
 bindsym $mod+F11 exec --no-startup-id pactl -- set-sink-volume 0 -5%
 bindsym $mod+F10 exec --no-startup-id pactl -- set-sink-mute 0 toggle
 
-bindsym XF86AudioNext exec --no-startup-id $spotify_command.Next
-bindsym XF86AudioPrev exec --no-startup-id $spotify_command.Previous
-bindsym XF86AudioPlay exec --no-startup-id $spotify_command.PlayPause
-bindsym $mod+F8 exec --no-startup-id $spotify_command.Next
-bindsym $mod+F7 exec --no-startup-id $spotify_command.Previous
-bindsym $mod+F6 exec --no-startup-id $spotify_command.PlayPause
-
 bindsym XF86MonBrightnessUp exec --no-startup-id light -A 10
 bindsym XF86MonBrightnessDown exec --no-startup-id light -U 10
 bindsym Shift+XF86MonBrightnessUp exec --no-startup-id light -A 5
@@ -187,6 +186,8 @@ bindsym Shift+XF86MonBrightnessDown exec --no-startup-id light -U 5
 
 bindsym $mod+o exec $alsamixer
 bindsym $mod+p exec $nmtui
+bindsym $mod+m exec $spotify_tui
+bindsym $mod+i exec $floating_pcmanfm
 
 bindsym --release $mod+button2 kill
 bindsym $mod+button3 floating toggle
@@ -233,3 +234,4 @@ mode "$mode_system" {
 bindsym $mod+Escape mode "$mode_system"
 
 exec "systemctl --user import-environment; systemctl --user start sway-session.target"
+exec nimf
