--- a/home/.config/i3/config
+++ b/home/.config/i3/config
@@ -135,8 +135,8 @@ bindsym $mod+z focus child
 bindsym $mod+minus move scratchpad
 bindsym $mod+equal scratchpad show
 
-bindsym --release Print exec --no-startup-id $capture
-bindsym --release Control+Print exec $capture_region
+bindsym --release Control+Print exec --no-startup-id $capture
+bindsym --release Print exec $capture_region
 
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl -- set-sink-volume 0 +5%
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl -- set-sink-volume 0 -5%
