--- a/home/.config/i3/config
+++ b/home/.config/i3/config
@@ -212,3 +212,4 @@ exec --no-startup-id dunst
 exec --no-startup-id kime-xim
 exec --no-startup-id kime-indicator
 exec --no-startup-id picom
+exec --no-startup-id an2linuxserver
