--- a/desktops/alacritty.desktop
+++ b/desktops/alacritty.desktop
@@ -1,8 +1,8 @@
 [Desktop Entry]
 Type=Application
 TryExec=alacritty
-Exec=env WAYLAND_DISPLAY= WINIT_HIDPI_FACTOR=1.0 alacritty
-Icon=utilities-terminal
+Exec=env WINIT_UNIX_BACKEND=x11 alacritty
+Icon=Alacritty
 Terminal=false
 Categories=System;TerminalEmulator;
 
@@ -16,4 +16,4 @@ X-Desktop-File-Install-Version=0.24
 
 [Desktop Action New]
 Name=New Terminal
-Exec=env WAYLAND_DISPLAY= WINIT_HIDPI_FACTOR=1.0 alacritty
+Exec=env WINIT_UNIX_BACKEND=x11 alacritty
